--- a/portifolio/index.html
+++ b/portifolio/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <header class="container text-center">
-        <img src="examinando penellope.webp" alt="veterinaria examinando uma cachorrinha chamada Penellope"class="rounded-circle" width="150" height="150">
-        <p>Sou Tati</p>
+        <img src="modelo06.png" alt="gatinho sendo examinado"class="rounded-circle" width="200" height="200">
+        <p>Sou tati</p>
         <h1>Sou veterinaria formada a 3 anos</h1>
         <p>Sou veterinaria formada a 3 anos,e ja participei de varias instituições como ONGS Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione enim, unde dicta recusandae labore sequi aperiam distinctio temporibus sit esse facilis aspernatur ad odit harum ex animi quis laboriosam? Quod.</p>
         <P>Minhas habilidades são:</P>
@@ -17,9 +17,9 @@
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero delectus nemo iste rerum! Voluptates iure aut praesentium quae qui. Ex exercitationem reiciendis rem ad cupiditate deserunt tenetur sint maxime tempore.</p>
         </p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis obcaecati facere corporis illo doloremque nam voluptates! Quas ipsum tempore nostrum eaque, maiores, consequuntur nam consectetur dolor provident quod necessitatibus itaque.
         <div>
-            <p>Empatia</p>
-            <p>Atuar sobre pressão</p>
-            <p>Boa comunicação</p>
+            <p class="badge text-bg-secondary">Empatia</p>
+            <p class="badge text-bg-secondary">Atuar sobre pressão</p>
+            <p class="badge text-bg-secondary">Boa comunicação</p>
         </div>
         
 
